# gothic3sdk-scripts

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/Script_ABWithoutAB/: CMakeLists.txt  Script_ABWithoutAB.cpp  Script_ABWithoutAB.h
examples/Script_AniName/: CMakeLists.txt  Script_AniName.cpp
examples/Script_AniName_Adp/: CMakeLists.txt  Script_AniName_Adp.cpp
examples/Script_AttackSpeed/: CMakeLists.txt  Script_AttackSpeed.cpp
examples/Script_CrashReport/: CMakeLists.txt  Readme_DE.txt  Readme_EN.txt  Script_CrashReport.cpp
examples/Script_DumpProperties/: CMakeLists.txt  Script_DumpProperties.cpp
examples/Script_FontScale/: CMakeLists.txt  Readme_DE.txt  Readme_EN.txt  Script_FontScale.cpp
examples/Script_LearnPoints/: CMakeLists.txt  Script_LearnPoints.cpp
examples/Script_ModMe/: CMakeLists.txt
examples/Script_ModMe/src/: Common.h  ModSettings.h  Script_ModMe.cpp
examples/Script_ModMe/src/console/: m_commandhandler.cpp  m_commandhandler.h
examples/Script_ModMe/src/console/Entity/: Entity.cpp  Entity.h  Entity_Enable.cpp  Entity_Enable.h  Entity_Equip.cpp  Entity_Equip.h  Entity_Goto.cpp  Entity_Goto.h  Entity_LogInventory.cpp  Entity_LogInventory.h
examples/Script_ModMe/src/console/File/: File.cpp  File.h  File_ColMesh.cpp  File_ColMesh.h  File_Dump.cpp  File_Dump.h  File_Reload.cpp  File_Reload.h
examples/Script_ModMe/src/console/Tools/: Tools.cpp  Tools.h  Tools_DumpGameState.cpp  Tools_DumpGameState.h  Tools_GameEvent.cpp  Tools_GameEvent.h  Tools_Quest.cpp  Tools_Quest.h  Tools_SetStringtable.cpp  Tools_SetStringtable.h
examples/Script_ModMe/src/console/Vars/: Vars.cpp  Vars.h
examples/Script_ModMe/src/console/World/: World.cpp  World.h  World_CompileLightmaps.cpp  World_CompileLightmaps.h  World_SaveLayer.cpp  World_SaveLayer.h  World_SaveSector.cpp  World_SaveSector.h
examples/Script_ModMe/src/mods/: CollisionShape.cpp  DummyCollector.cpp  EasyStart.cpp  FixResourceAnimationActor.cpp  FixResourceMeshComplex.cpp  MessageLogger.cpp  ResourceCompiler.cpp  ResourceCompiler.h
examples/Script_MonsterDamage/: CMakeLists.txt  Script_MonsterDamage.cpp
examples/Script_MouseDrag/: CMakeLists.txt  Script_MouseDrag.cpp
examples/Script_NoSVM/: CMakeLists.txt  Script_NoSVM.cpp
examples/Script_RemoteControl/: CMakeLists.txt
examples/Script_RemoteControl/src/: Script_RemoteControl.cpp  me_ipcadmin.cpp  me_ipcadmin.h
examples/Script_RemoteControl/src/handler/: me_requesthandler.cpp  me_requesthandler.h  me_rh_entity.cpp  me_rh_entity.h  me_rh_goto.cpp  me_rh_goto.h  me_rh_heartbeat.cpp  me_rh_heartbeat.h  me_rh_property.cpp  me_rh_property.h  me_rh_spawn.cpp  me_rh_spawn.h
examples/Script_Subtitles/: CMakeLists.txt  Script_Subtitles.cpp
examples/Script_Tracer/: CMakeLists.txt  Script_Tracer.cpp
scripts/: CMakeLists.txt
scripts/Script_AdjustedTheft/: CMakeLists.txt  Script_AdjustedTheft.cpp  Script_AdjustedTheft.h
scripts/Script_UI/: CMakeLists.txt  EXP_GUI.cpp  EXP_GUI.h  Script_UI.cpp  Script_UI.h
scripts/Script_UI/Data/gui/: G3_HUD_CrossHair.tga  G3_HUD_EXP_Back.tga  G3_HUD_EXP_Front.tga
scripts/Script_UI/Data/gui/resources/: g3.gui.res
